fixed trailing white space issue with component scenarios, and started custom param types